# skipper-cli

./: LAB_GUIDE.md  LICENSE  README.md  pyproject.toml  verify_skipper.ps1
skipper/: __init__.py  cli.py  lab_monitor.py  lab_simulator.py  log_analyzer.py  monitor.py  reporter.py  scanner.py  threat_intel.py
src/skipper/: cli.py  monitor.py
tests/: test_cybersentry.py
