[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skipper"
version = "1.0.0"
description = "Captain's SOC Toolkit – Free SIEM-like monitoring and recon"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "M-MOHAMED-IRFAN-MN" }
]
license = { text = "MIT" }
dependencies = []

[project.scripts]
skipper = "skipper.cli:main"

[tool.setuptools]
packages = ["skipper"]